# mythic-kotlin

./: .gitignore  LICENSE.txt  README.md  build.gradle.kts  build_kotlin.gradle  settings.gradle.kts
gradle/: .gitignore  settings.gradle.kts  utility.gradle.kts
modules/aura-editing/: build.gradle.kts
modules/aura-generation/: build.gradle.kts
modules/aura_generation/: build.gradle.kts
modules/breeze/: build.gradle.kts
modules/cameraman/: build.gradle.kts
modules/configuration/: build.gradle.kts
modules/debugging/: README.md  build.gradle.kts  settings.gradle.kts
modules/drawing/: build.gradle.kts
modules/editing/: build.gradle.kts
modules/editing-lookinglass/: build.gradle.kts
modules/ent/: build.gradle.kts
modules/ent-scenery/: build.gradle.kts
modules/ent-spatial/: build.gradle.kts
modules/fathom/: build.gradle.kts  settings.gradle.kts
modules/glowing/: build.gradle.kts
modules/happenings/: build.gradle.kts
modules/imaging/: build.gradle.kts  settings.gradle.kts
modules/lookinglass/: build.gradle.kts
modules/mythic-logging/: build.gradle.kts
modules/mythic-shape-meshes/: build.gradle.kts
modules/platforming/: build.gradle.kts
modules/randomly/: build.gradle.kts
modules/resource-loading/: build.gradle.kts
modules/scenery/: build.gradle.kts
modules/spatial/: build.gradle.kts
modules/spatial_serialization/: build.gradle.kts
mythic-godot/: .gitignore  README.md
mythic-native/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
mythic-native/src/: font_loader.h  interface.cpp  messageBox.cpp
(+912 files in other folders)
